--- a/index.html
+++ b/index.html
@@ -28,25 +28,31 @@
             </section>
 
             <section class="randominfo">
-                <h2>Some random information.</h2>
-                <div class="randominfo-item">
-                    <div class="randominfo-image"></div>
-                    <p>This is some subtext under an illustration or image</p>
-                </div>
-                <div class="randominfo-item">
-                    <div class="randominfo-image"></div>
-                    <p>This is some subtext under an illustration or image</p>
-                </div>
-                <div class="randominfo-item">
-                    <div class="randominfo-image"></div>
-                    <p>This is some subtext under an illustration or image</p>
-                </div>
-                <div class="randominfo-item">
-                    <div class="randominfo-image"></div>
-                    <p>This is some subtext under an illustration or image</p>
+                <h1>Some random information.</h1>
+                <div class="rinfo-container">
+                    <div class="rinfo-item">
+                        <div class="rinfo-image">
+                            <p>This is some subtext under an illustration or image</p>
+                        </div>
+                    </div>
+                    <div class="rinfo-item">
+                        <div class="rinfo-image">
+                            <p>This is some subtext under an illustration or image</p>
+                        </div>
+                    </div>
+                    <div class="rinfo-item">
+                        <div class="rinfo-image">
+                            <p>This is some subtext under an illustration or image</p>
+                        </div>
+                    </div>
+                    <div class="rinfo-item">
+                        <div class="rinfo-image">
+                            <p>This is some subtext under an illustration or image</p>
+                        </div>
+                    </div>
                 </div>
             </section>
-            
+
             <section class="quote">
                 <p>This is an inspiring quote, or a testimonial from a customer.
                     Maybe it's just filling up space, or maybe people will actually read it.
