fixed spacing among sections, styled the randinfo section

--- a/index.html
+++ b/index.html
@@ -30,25 +30,21 @@
             <section class="randominfo">
                 <h1>Some random information.</h1>
                 <div class="rinfo-container">
-                    <div class="rinfo-item">
-                        <div class="rinfo-image">
-                            <p>This is some subtext under an illustration or image</p>
-                        </div>
+                    <div class="rinfo-item">          
+                        <img class="rinfo-image" src="images/man1.jpg">
+                        <p>this is some subtext under an illustration or image</p>  
                     </div>
-                    <div class="rinfo-item">
-                        <div class="rinfo-image">
-                            <p>This is some subtext under an illustration or image</p>
-                        </div>
+                    <div class="rinfo-item">            
+                        <img class="rinfo-image" src="images/man2.jpg">
+                        <p>this is some subtext under an illustration or image</p>  
                     </div>
-                    <div class="rinfo-item">
-                        <div class="rinfo-image">
-                            <p>This is some subtext under an illustration or image</p>
-                        </div>
+                    <div class="rinfo-item">            
+                        <img class="rinfo-image" src="images/man3.jpg">
+                        <p>this is some subtext under an illustration or image</p>  
                     </div>
-                    <div class="rinfo-item">
-                        <div class="rinfo-image">
-                            <p>This is some subtext under an illustration or image</p>
-                        </div>
+                    <div class="rinfo-item">            
+                        <img class="rinfo-image" src="images/man4.jpg">
+                        <p>this is some subtext under an illustration or image</p>  
                     </div>
                 </div>
             </section>
