styled the footer and signup section

--- a/index.html
+++ b/index.html
@@ -50,19 +50,20 @@
             </section>
 
             <section class="quotes">
-                <div class="quote-container">
-                    <p class="quote">This is an inspiring quote, or a testimonial from a customer.
-                        Maybe it's just filling up space, or maybe people will actually read it.
-                        Who knows? All I know is that it looks nice.
-                    </p>
-                </div>
+                <p class="quote">This is an inspiring quote, or a testimonial from a customer.
+                    Maybe it's just filling up space, or maybe people will actually read it.
+                    Who knows? All I know is that it looks nice.
+                </p>
                 <p class="quoter">-Thor, God of Thunder</p>
             </section>
 
             <section class="signup">
                 <div class="blue-signup-box">
-                    <h2>Call to action! It's time!</h2>
-                    <p>Sign up for our product by clicking that button right over here</p>
+                    <div class="cta-text">
+                        <h2>Call to action! It's time!</h2>
+                        <p>Sign up for our product by clicking that button right over here</p>
+                    </div>
+                    <button class="cta-button">Sign Up</button>
                 </div>
             </section>
         </main>
